--- a/app/index.html
+++ b/app/index.html
@@ -68,5 +68,36 @@
     </nav>
     <script src="js/tabs.js"></script>
     <script src="js/monitor.js"></script>
+    <script>
+      const settingsform = document.getElementById('settings-form');
+
+      //Get Settings
+      ipcRenderer.on('settings:get', (e, settings) => {
+        document.getElementById('cpu-overload').value = settings.cpuOverload;
+        document.getElementById('alert-frequency').value =
+          settings.alertFrequency;
+      });
+
+      //Submit Settings
+      settingsform.addEventListener('submit', (e) => {
+        e.preventDefault();
+        const cpuOverload = document.getElementById('cpu-overload').value;
+        const alertFrequency = document.getElementById('alert-frequency').value;
+
+        //Send new settings to main process
+        ipcRenderer.send('settings:set', { cpuOverload, alertFrequency });
+
+        showAlert('Settings Saved');
+      });
+
+      function showAlert(msg) {
+        const alert = document.getElementById('alert');
+        alert.classList.remove('hide');
+        alert.classList.add('alert');
+        alert.innerHTML = msg;
+
+        setTimeout(() => alert.classList.add('hide'), 1500);
+      }
+    </script>
   </body>
 </html>
